# ichoi

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  tools.sh
.reactorcide/: BOOTSTRAP.md  secret-grants.yaml
.reactorcide/jobs/: build.yaml  conventional-commits.yaml  csil.yaml  release.yaml  server-build-and-deploy.yaml  server-build-test.yaml  test-sqlite.yaml
.reactorcide/jobs/scripts/: release-lib-test.sh  release-lib.sh  release.sh  server-build-and-deploy.sh  server-build-test.sh
docs/: DESIGN.md  IMPLEMENTATION.md  ffmpeg.md
server/: .dockerignore  Cargo.toml  Dockerfile  rustfmt.toml
server/crates/ichoi/: Cargo.toml
server/crates/ichoi-decoder/: Cargo.toml
server/crates/ichoi-decoder/src/: lib.rs
server/crates/ichoi/src/: app.rs  art.rs  auth.rs  cli.rs  config.rs  install.rs  lib.rs  main.rs  satellite.rs  scan.rs  tls.rs  transport.rs
server/crates/ichoi/src/audio/: mod.rs
server/crates/ichoi/src/auth/: local_rp.rs
server/crates/ichoi/src/db/: mod.rs  models.rs  schema.rs  store.rs
server/crates/ichoi/src/handlers/: mod.rs
server/crates/ichoi/src/media/: demux.rs  mod.rs
server/crates/ichoi/src/server/: http.rs  media_http.rs  mod.rs  tcp.rs
server/crates/ichoi/tests/: audiobook_flow_test.rs  auth_flow_test.rs  events_transport_test.rs  library_flow_test.rs  local_rp_test.rs  satellite_pwa_test.rs
server/crates/ichoi/tests/common/: mod.rs
server/crates/libichoi/: Cargo.toml
server/crates/libichoi/src/: account.rs  codec.rs  csil.rs  csil_channel.rs  error.rs  lib.rs  m3u.rs  share.rs
server/deploy/: Caddyfile  docker-compose.satellite.yml  docker-compose.yml
server/migrations/2026-07-11-000001_initial/: down.sql  up.sql
server/migrations/2026-07-11-000002_album_art_checked/: up.sql
server/migrations/2026-07-12-000001_playlist_visibility/: down.sql  up.sql
server/migrations/2026-07-15-000001_linkkeys_local_rp/: down.sql  up.sql
server/migrations/2026-07-17-000001_audiobook_progress/: down.sql  up.sql
server/migrations/2026-07-20-000001_satellite_pwa/: down.sql  up.sql
server/schema/: admin.csil  common.csil  ichoi.csil  library.csil  media.csil  node.csil  player.csil  session.csil
server/web/: README.md
server/web/themes/default/: ACCESSIBILITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
server/web/themes/default/public/: ichoi-worklet.js  manifest.webmanifest  sw.js
server/web/themes/default/src/: App.tsx  main.tsx  styles.css
server/web/themes/default/src/components/: AlbumTile.tsx  CoverArt.tsx  Dialog.tsx  Icons.tsx  Layout.tsx  SatelliteAdmin.tsx  ServerSwitcher.tsx  TrackList.tsx  Transport.tsx  VirtualAlbumGrid.tsx  common.tsx
server/web/themes/default/src/lib/: cbor.ts  csil.ts  format.ts  i18n.tsx  satellite-mode.ts  schema.ts  services.ts
server/web/themes/default/src/lib/audio/: decoder.ts  planar.ts  player.ts  worklet-protocol.ts
server/web/themes/default/src/locales/: en.json
server/web/themes/default/src/routes/: AlbumPage.tsx  ArtistPage.tsx  AudiobookPage.tsx  AudiobooksPage.tsx  JukeboxPage.tsx  LibraryPage.tsx  NowPlayingPage.tsx  PlaylistsPage.tsx  SatellitePage.tsx  SearchPage.tsx  SettingsPage.tsx
server/web/themes/default/src/stores/: playback.tsx  servers.tsx  theme.tsx  toasts.tsx
