[workspace]
resolver = "2"
members = ["crates/libichoi", "crates/ichoi", "crates/ichoi-decoder"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.0.0"

[workspace.dependencies]
# Pure / shared
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["clock"] }
uuid = { version = "1", features = ["v7"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Database (SQLite only, bundled — no system libsqlite)
diesel = { version = "2.2", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.2"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
r2d2 = "0.8"

# Async + HTTP
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "fs", "process", "sync", "time", "signal"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
futures-util = "0.3"
ciborium = "0.2"
tokio-util = { version = "0.7", features = ["io"] }

# Audio
symphonia = { version = "0.5", default-features = false }
lofty = "0.21"
walkdir = "2"
libloading = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rcgen = { version = "0.13", default-features = false, features = ["crypto", "pem", "ring"] }
x509-parser = "0.16"

# DNS-less LinkKeys relying-party SDK. Pin the repository revision so releases
# remain reproducible even before the SDK has an independently versioned crate.
linkkeys-local-rp = { git = "https://github.com/catalystcommunity/linkkeys.git", rev = "57cebd1f53ff6eb86154e9f05b350d78ca6ee730" }

[profile.release]
lto = "thin"
strip = true
