[package]
name = "ichoi"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Ichoi — music player, library manager, and distributed jukebox server."

[lib]
name = "ichoi"
path = "src/lib.rs"

[[bin]]
name = "ichoi"
path = "src/main.rs"

[dependencies]
libichoi = { path = "../libichoi" }
ichoi-decoder = { path = "../ichoi-decoder" }

anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }

clap = { workspace = true }

diesel = { workspace = true }
diesel_migrations = { workspace = true }
libsqlite3-sys = { workspace = true }
r2d2 = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
futures-util = { workspace = true }
ciborium = { workspace = true }
tokio-util = { workspace = true }

symphonia = { workspace = true, features = ["mp3", "aac", "alac", "isomp4", "ogg", "vorbis", "flac", "pcm", "wav"] }
lofty = { workspace = true }
walkdir = { workspace = true }
libloading = { workspace = true }
reqwest = { workspace = true }
linkkeys-local-rp = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rcgen = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
tempfile = "3"
libichoi = { path = "../libichoi" }
tower = "0.5"
http-body-util = "0.1"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
cpal = "0.15"

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.7"
